s/graph_id/flow_id/  golintyvety
